# ignis

./: CHANGELOG.md  Cargo.toml  MIGRATION_PLAN.md  Makefile  PUBLISHING.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
config/: agent-service.example.toml
crates/agent-service/: Cargo.toml
crates/agent-service/src/: main.rs
crates/ember-cli/: Cargo.toml
crates/ember-cli/src/: api.rs  config.rs  main.rs  template.rs
crates/ember-host-abi/: Cargo.toml
crates/ember-host-abi/src/: lib.rs
crates/ember-host-abi/wit/: world.wit
crates/ember-manifest/: Cargo.toml
crates/ember-manifest/src/: lib.rs
crates/ember-platform-host/: Cargo.toml
crates/ember-platform-host/src/: lib.rs
crates/ember-runtime/: Cargo.toml
crates/ember-runtime/src/: lib.rs
crates/ember-sdk/: Cargo.toml
crates/ember-sdk/src/: lib.rs
crates/ignis-cli/: Cargo.toml
crates/ignis-cli/src/: api.rs  auth.rs  build.rs  cli.rs  config.rs  context.rs  domain.rs  main.rs  output.rs  project.rs  project_domain.rs  project_state.rs  service.rs  skill.rs  skill_bundle.rs  template.rs
crates/ignis-host-abi/: Cargo.toml
crates/ignis-host-abi/src/: lib.rs
crates/ignis-host-abi/wit/: world.wit
crates/ignis-manifest/: Cargo.toml
crates/ignis-manifest/src/: lib.rs  project_hcl.rs
crates/ignis-platform-host/: Cargo.toml
crates/ignis-platform-host/src/: lib.rs
crates/ignis-runtime/: Cargo.toml
crates/ignis-runtime/src/: lib.rs
crates/ignis-sdk/: Cargo.toml
crates/ignis-sdk/src/: lib.rs
crates/taskplan/: Cargo.toml
crates/taskplan/src/: lib.rs
deploy/agent-service/: Containerfile  agent-service.toml  build_image.sh  compose.yaml  entrypoint.sh
deploy/opencode-agent-service/: Containerfile  build_image.sh  entrypoint.sh
docs/: Stage_1_AR_Blueprint.md  agent-service-implementation.md  api.md  cli.md  hcl-platform-architecture.md  hcl-platform-todo.md  ignis-hcl.md  ignis-service-link-v1-checklist.md  ignis-service-link.md  ignis-toml.md  integration.md  object-store-presign.md  quickstart.md  worker-toml.md
docs/ember-sdk/: index.md
docs/ember-sdk/http/: Context.md  Middleware.md  Next.md  Router.md  empty_response.md  index.md  text_response.md
docs/ember-sdk/http/middleware/: cors.md  index.md  logger.md  request_id.md
docs/ember-sdk/sqlite/: execute.md  execute_batch.md  index.md  query.md  query_typed.md  transaction.md
docs/ember-sdk/sqlite/migrations/: Migration.md  apply.md  index.md
docs/ignis-repo-developer/: SKILL.md
docs/ignis-repo-developer/references/: doc_index.md  ignis-sdk
docs/ignis-sdk/mysql/: execute.md  transaction.md
docs/ignis-sdk/object_store/: presign_download.md  presign_upload.md
docs/ignis-sdk/postgres/: query.md
docs/zh/: api.md  cli.md  ignis-hcl.md  quickstart.md  system-api.md
examples/: README.md
examples/cos-and-jobs-example/: ignis.hcl
examples/cos-and-jobs-example/.ignis/: project.json
examples/cos-and-jobs-example/services/api/: Cargo.toml
examples/cos-and-jobs-example/services/api/src/: auth.rs  db.rs  jobs.rs  models.rs  response.rs  util.rs
examples/cos-and-jobs-example/services/web/src/: index.html
examples/dual-frontend-login-example/: README.md  ignis.hcl
examples/dual-frontend-login-example/.ignis/: project.json
examples/dual-frontend-login-example/services/admin/src/: index.html
examples/google-cos-upload-example/: README.md
examples/google-cos-upload-example/.ignis/: project.json
examples/hello-fullstack/: README.md
examples/hello-fullstack/.ignis/: project.json
examples/hello-worker/: Cargo.toml  worker.toml
examples/hello-worker/wit/: world.wit
examples/ignis-login-example/: README.md  ignis.hcl  ignis.toml
examples/ignis-login-example/.ignis/: project.json
examples/math-proof-lab/: wechat-article.html
examples/math-proof-lab/.ignis/: project.json
examples/math-proof-lab/services/: .gitignore
examples/math-proof-lab/services/formal-verifier-agent/: .gitignore
examples/object-store-presign-example/: README.md  ignis.hcl
examples/object-store-presign-example/.ignis/: project.json
examples/object-store-presign-example/services/api/: Cargo.toml
examples/opencode-agent-e2e/: README.md  ignis.hcl
examples/opencode-agent-e2e/.ignis/: project.json
examples/opencode-agent-e2e/services/agent-service/: .gitignore
examples/opencode-agent-e2e/services/bridge-agent/: AGENTS.md
examples/opencode-agent-e2e/services/coordinator-agent/: AGENTS.md
examples/opencode-agent-e2e/services/modularity-agent/: AGENTS.md
examples/opencode-agent-e2e/services/rigor-agent/: AGENTS.md
examples/pocket-tasks-worker/: Cargo.toml
examples/pocket-tasks-worker/src/: lib.rs
examples/postgres-example/: README.md
examples/postgres-example/.ignis/: project.json
examples/sqlite-example/: README.md  ignis.toml
examples/sqlite-example/.ignis/: project.json
examples/sqlite-worker/: Cargo.toml  worker.toml
examples/sqlite-worker/src/: lib.rs
hello-world-test/: Cargo.toml  worker.toml
hello-world-test/src/: lib.rs
hello-world-test/wit/: world.wit
scripts/: sync_skill_references.sh
skills/ember/: SKILL.md
skills/ember-repo-developer/: SKILL.md
skills/ember-repo-developer/references/: doc_index.md
skills/ember-user/: SKILL.md
skills/ember-user/references/: doc_index.md  ember-sdk  integration.md
skills/ember-worker/: SKILL.md
skills/ember-worker/references/: cli.md  integration.md
skills/ember/references/: cli.md  integration.md  worker-toml.md
skills/ignis/: SKILL.md
skills/ignis-login/: SKILL.md
skills/ignis-repo-developer/: SKILL.md
skills/ignis-repo-developer/references/: doc_index.md
skills/ignis-user/: SKILL.md
skills/ignis-user/references/: common-server-public-api.md  doc_index.md  hello-service.rs  hello-worker.rs  igniscloud-id-public-api.md  sqlite-worker.rs  worker-toml.md
skills/ignis/references/: api.md  cli.md  doc_index.md  ignis-hcl.md  ignis-toml.md  integration.md  jobs-and-schedules.md  object-store-presign.md  taskplan.md
skills/ignis/references/ignis-sdk/: index.md
(+33 files in other folders)
