[package]
name = "agent-service"
description = "Minimal agent task service"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
repository = "https://github.com/igniscloud/ignis"
version.workspace = true
publish = false

[[bin]]
name = "agent-service"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "signal", "time"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
