[package]
name = "ember-platform-host"
description = "Platform-specific host implementations layered on top of ember-runtime"
edition.workspace = true
keywords = ["wasm", "host", "sqlite", "runtime"]
license.workspace = true
categories = ["api-bindings", "database", "wasm"]
readme = "../../README.md"
version.workspace = true

[dependencies]
anyhow.workspace = true
ember-manifest = { path = "../ember-manifest" }
hex.workspace = true
rusqlite.workspace = true
wasmtime.workspace = true
