[package]
name = "ignis-cli"
description = "CLI for Ignis services: scaffolding, build, publish/deploy, and compatible control-plane APIs"
edition.workspace = true
license.workspace = true
readme = "../../README.md"
version.workspace = true
publish = false
default-run = "ignis"

[[bin]]
name = "ignis"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
dirs.workspace = true
hex.workspace = true
http-body-util.workspace = true
hyper.workspace = true
flate2 = "1.1.5"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7.1"
sha2.workspace = true
tar = "0.4.44"
tokio = { workspace = true, features = ["process"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hyper-util = { version = "0.1.20", features = ["tokio"] }
ignis-manifest = { path = "../ignis-manifest" }
