[package]
name = "ignis-host-abi"
description = "Shared host ABI definitions for Ignis guest SDKs and runtimes"
edition.workspace = true
keywords = ["wasm", "wit", "abi", "component-model"]
license.workspace = true
categories = ["api-bindings", "wasm"]
readme = "../../README.md"
version.workspace = true

[lib]
path = "src/lib.rs"
