[package]
name = "ignis-platform-host"
description = "Platform-specific host implementations layered on top of ignis-runtime"
edition.workspace = true
keywords = ["wasm", "host", "sqlite", "runtime"]
license.workspace = true
categories = ["api-bindings", "database", "wasm"]
readme = "../../README.md"
version.workspace = true

[dependencies]
anyhow.workspace = true
ignis-manifest = { path = "../ignis-manifest" }
hex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
wasmtime.workspace = true
