[package]
name = "ignis-runtime"
description = "Wasmtime-based execution core for Ignis Wasm HTTP workers"
edition.workspace = true
keywords = ["wasm", "wasi", "http", "runtime"]
license.workspace = true
categories = ["wasm", "web-programming"]
readme = "../../README.md"
version.workspace = true

[dependencies]
anyhow.workspace = true
ignis-platform-host = { path = "../ignis-platform-host" }
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wasmtime-wasi-http.workspace = true
ignis-manifest = { path = "../ignis-manifest" }
